--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-19 Ingo Belka <ingo (.) belka (at) web (.) de>
+
+    modules/tables-in-lists.pl New module wich will embedd tables
+    in li-list-tags. The consecutive numbering is now saved.
+
+
 2008-06-13  Alex Schroeder  <alex@gnu.org>
 
 	* t/test.pl (xpath_do): No longer strip the HTML element in order
