--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-2008-06-23  Alex Schroeder  <alex@gnu.org>
+2008-06-23  Alex Schroeder  <alex@gnu.org>, Weakish Jiang <weakish@gmail.com>
 
 	* wiki.pl (GetHtmlHeader): Add universal edit button.
+	* backlinks.pl (NewGetSearchLink): Change the regex to match [[page
+	name|description]]
 
 2008-06-19 Ingo Belka <ingo (.) belka (at) web (.) de>
 
