--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2008-06-26  Alex Schroeder  <alex@gnu.org>
 
 	* modules/bbcode.pl (bbCodeRule): Implemented [center].
-
+	* modules/emailquote.pl (EmailQuoteRule): Fixed bugs. Versions before
+	  are buggy.
 2008-06-25 Weakish Jiang <weakish@gmail.com>
 
 	* modules/creole.pl (CreoleHeadingRule): Better support on
