--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-07-11  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (RunMyMacros): New.
+	(BrowsePage): Call RunMyMacros on the result of AddComment.
+	(DoPost): Call RunMyMacros on the concatenated page body +
+	comment.
+	(AddComment): Call RunMyMacros on the comments, too.
+
 2008-07-08  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (DoPost): Run macros after concatenating page and
