--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2008-07-12  Alex Schroeder  <alex@gnu.org>
+
+	The following change makes sure we can put *bold* words at the
+	beginning of lines if used together with markup.pl.
+	
+	* modules/creole.pl (CreoleListRule): New. Added with a very late
+	priority.
+	(CreoleNewLineRule): Add two more newline oriented rule items and
+	moved priority even further back.
+	(CreoleRule): Removed list items and newline rules.
+
 2008-07-11  Alex Schroeder  <alex@gnu.org>
 
 	* wiki.pl (RunMyMacros): New.
