--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 	(@DojoPlugins, $DojoTheme): New.
 	(WysiwygScript): A whole lot of new javascript.
 	(NewWysiwygGetTextArea): Add a hidden input field, add id to
-	textarea.
+	textarea. Don't change the comment form ('aftertext').
 
 2008-07-12  Alex Schroeder  <alex@gnu.org>
 
