--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,19 @@
+2008-08-07  Alex Schroeder  <alex@gnu.org>
+
+	* wiki.pl (ItemName): New. Strips dates from page titles.
+	(RssItem): Use it.
+
 2008-07-30  Alex Schroeder  <alex@gnu.org>
 
 	* modules/image.pl (ImageSupportRule): Provide a default alt text
 	if linking to a local image.
 	(ImageGetExternalUrl, ImageGetInternalUrl): Make sure link uses _
 	instead of spaces if linking to a local image.
+
+2008-07-24  Alex Schroeder  <alex@gnu.org>
+
+	* wikiput (post): Fixed handling of secret key.
+	(main): ||0 is not necessary.
 
 2008-07-18  Alex Schroeder  <alex@gnu.org>
 
