--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-19  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/hibernal.pl: New.
+
 2008-09-15  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* wiki.pl (BrowsePage): Nested the preview div within the
