--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2008-10-23  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/wiki.pl (OpenHtmlEnvironment): Generalized list closure
+	by delegating that closure to the "CloseHtmlEnvironments" function.
+	This permits other extensions (namely, the Creole Markup extension)
+	to redefine the "CloseHtmlEnvironments" function and thereby
+	precisely override just when and how list markup is closed.
+	* modules/creole.pl ($CreoleDashStyleUnorderedLists): New option.
+	(RunMyRules): New function.
+	(CreoleRule): Improved conformance to the Wiki Creole standard by
+	strictly requiring, among other notable things, that horizontal
+	rules consist of four and only four dashes, that all image links
+	to images on the Wiki (e.g., image "FreeLinks") be marked as dirty
+	blocks, that the nowiki markup strictly require the opening and
+	closing three braces to reside on their own lines having no other
+	markup, and that preformatted code not extend over multiple blocks.
+	(CreoleListAndNewLineRule): Avoid handling dash-style unordered
+	list markup unless explicitly requested by the new
+	"$CreoleDashStyleUnorderedLists" option being set to 1 (since
+	that markup is non-standard, and explicitly contradicts the Wiki
+	Creole standard).
+	* t/creole.t: Adjusted tests broken by the above modifications;
+	these were, typically, tests for nowiki and preformatted markup
+	that assumed a less conformant, gentler handling of that markup.
+
 2008-10-22  Alex Schroeder  <alex@gnu.org>
 
 	* modules/near-links.pl (NewNearLinksResolveId): Make sure that
