--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-11-16  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* wiki.pl (PrintWikiToHTML): Slightly reordered function calls,
+	so as to optimize a few edge cases.
+
+2008-11-16  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* wiki.pl (RegisterBlockLevelElement): Renamed to
 	SetHtmlEnvironmentContainer (and changed in every other module,
 	where called).
